--- a/src/app/admin/quan-ly-nguoi-dung/quan-ly-nguoi-dung.component.html
+++ b/src/app/admin/quan-ly-nguoi-dung/quan-ly-nguoi-dung.component.html
@@ -12,7 +12,7 @@
         <input
           type="text"
           class="form-control"
-          placeholder="Nhập vào tài khoản hoặc tài khoản người dùng"
+          placeholder="Nhập vào tài khoản hoặc họ tên người dùng"
           formControlName="name"
         />
         <div class="input-group-btn">
